@@ -4,7 +4,7 @@ workspace {
   cmdline = -include $PWD/MPC/config
   
   dds
-  //tests/DCPS/Messenger_ZeroCopy
+  tests/DCPS/Messenger_ZeroCopy
   tests/DCPS/ZeroCopyRead
   //performance-tests/DCPS/SimpleLatency/SimpleLatency.mpc
   performance-tests/DCPS/TCPListenerTest/TCPListener.mpc
